2007-12-12  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.AddIns/PackageExtensionNode.cs,
	  MonoDevelop.Core.AddIns/ServiceExtensionNode.cs,
	  MonoDevelop.Core.AddIns/ExecutionHandlerCodon.cs,
	  MonoDevelop.Core.Execution/ProcessService.cs,
	  MonoDevelop.Core.FileSystem/DefaultFileSystemExtension.cs,
	  MonoDevelop.Core.addin.xml: API cleanup.

2007-12-07  Geoff Norton  <gnorton@novell.com>

	* MonoDevelop.Core/PlatformService.cs: Add fallback mime-type support
	for ChangeLogs.

2007-12-06  Geoff Norton  <gnorton@novell.com>

	* MonoDevelop.Core/PlatformService.cs: New service to hand off the
	  platform specific operations to platform-specific addins.  Operations
	  such as Mime, Font, DefaultApplication and Icons (anything that
	  touches Gnome) is abstracted for now.
	* MonoDevelop.Core/Runtime.cs: Expose a static PlatformService to the
	  system.
	* MonoDevelop.Core/DesktopApplication.cs: Move this from
	  MonoDevelop.Core.Gui as it needs to be available from
	  PlatformService.cs.  Refactor the actual commands that get the
	  applications into the PlatformService
	* Makefile.am: Add PlatformService.cs and DesktopApplication.cs to 
	  the build.
	* MonoDevelop.Core.addin.xml: Register a new ExtensoinPoint for the
	  PlatformService

2007-12-04  Lluis Sanchez Gual <lluis@novell.com> 

	* Makefile.am, MonoDevelop.Core.mdp: Directory reorganization.

2007-12-01  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.ProgressMonitoring/ConsoleProgressMonitor.cs: Added
	  property to disable message logging.

2007-11-22  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Core/SystemAssemblyService.cs: Update SupportedVersions
	  depending on which ClrVersions were registered successfully.

2007-11-21  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Core/ClrVersion.cs, MonoDevelop.Core/SystemAssemblyService.cs:
	  Add the 2.1 profile.

2007-11-21  Lluis Sanchez Gual <lluis@novell.com> 
